Adding remaining In/out and week 2
1. Adding Input/Output remaining methods (POI and Properties)
2. Singleton
3. Enum

--- a/src/InOut/Resources/class.properties
+++ b/src/InOut/Resources/class.properties
@@ -3,6 +3,6 @@ url=http://www.homedepot.com
 browser=Chrome
 
 # Main Page
-element1=headerSearchBar = \".//input[@id='headerSearch']\"
-element2=headerSearchBarButton = \".//button[@id='headerSearchButton']\"
-element3=departmentMainMenu = \".//a[text()='All Departments']\"
+headerSearchBar = .//input[@id='headerSearch']
+headerSearchBarButton = .//button[@id='headerSearchButton']
+departmentMainMenu = .//a[text()='All Departments']
